[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://MenuMultiplayer.gd" type="Script" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PanelHost" type="Panel" parent="."]
margin_left = 379.175
margin_top = 165.858
margin_right = 646.175
margin_bottom = 339.858
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NomServeur" type="Label" parent="PanelHost"]
margin_left = 8.0
margin_top = 37.0
margin_right = 111.0
margin_bottom = 51.0
text = "Nom du Serveur"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortServeur" type="Label" parent="PanelHost"]
margin_left = 7.10577
margin_top = 87.0161
margin_right = 47.1058
margin_bottom = 101.016
text = "Port"

[node name="txtNomServeur" type="LineEdit" parent="PanelHost"]
margin_left = 7.3241
margin_top = 57.0
margin_right = 263.324
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPortServeur" type="LineEdit" parent="PanelHost"]
margin_left = 4.87057
margin_top = 107.795
margin_right = 62.8706
margin_bottom = 131.795
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtJoueursMax" type="SpinBox" parent="PanelHost"]
margin_left = 104.924
margin_top = 109.989
margin_right = 178.924
margin_bottom = 133.989
min_value = 2.0
max_value = 16.0
value = 6.0

[node name="btCreer" type="Button" parent="PanelHost"]
margin_left = 204.594
margin_top = 142.122
margin_right = 250.594
margin_bottom = 162.122
text = "Créer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxJoueurs" type="Label" parent="PanelHost"]
margin_left = 99.3251
margin_top = 89.8629
margin_right = 181.325
margin_bottom = 103.863
text = "Max; joueurs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreerServeur" type="Label" parent="PanelHost"]
margin_left = 18.3773
margin_top = 6.61583
margin_right = 143.377
margin_bottom = 20.6158
text = "Création du serveur"

[node name="PanelRejoindre" type="Panel" parent="."]
margin_left = 378.0
margin_top = 347.0
margin_right = 646.0
margin_bottom = 493.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RejoindreServeur" type="Label" parent="PanelRejoindre"]
margin_left = 69.5922
margin_top = 11.2144
margin_right = 198.592
margin_bottom = 25.2144
text = "Rejoindre le Serveur"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="Label" parent="PanelRejoindre"]
margin_left = 11.4207
margin_top = 55.5742
margin_right = 51.4207
margin_bottom = 69.5742
text = "IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RejoindreIp" type="LineEdit" parent="PanelRejoindre"]
margin_left = 6.8689
margin_top = 78.3213
margin_right = 92.8689
margin_bottom = 102.321
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="Label" parent="PanelRejoindre"]
margin_left = 129.582
margin_top = 59.7027
margin_right = 169.582
margin_bottom = 73.7027
text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RejoindrePort" type="LineEdit" parent="PanelRejoindre"]
margin_left = 116.384
margin_top = 75.1893
margin_right = 174.384
margin_bottom = 99.1895
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btRejoindre" type="Button" parent="PanelRejoindre"]
margin_left = 181.423
margin_top = 118.81
margin_right = 254.423
margin_bottom = 138.81
text = "Rejoindre"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelJoueur" type="Panel" parent="."]
margin_left = 380.0
margin_top = 17.0
margin_right = 647.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NomJoueur" type="Label" parent="PanelJoueur"]
margin_left = 8.0
margin_top = 8.0
margin_right = 115.0
margin_bottom = 22.0
text = "Nom du Joueur : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtNomJoueur" type="LineEdit" parent="PanelJoueur"]
margin_left = 10.8643
margin_top = 29.892
margin_right = 265.864
margin_bottom = 53.892
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconeJoueur" type="Sprite" parent="PanelJoueur"]
position = Vector2( 32.7524, 93.7791 )
scale = Vector2( 0.605474, 0.6182 )
texture = ExtResource( 1 )

[node name="btCouleur" type="ColorPickerButton" parent="PanelJoueur"]
margin_left = 71.0
margin_top = 94.5018
margin_right = 129.0
margin_bottom = 114.502
color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btCouleurDefaut" type="Button" parent="PanelJoueur"]
margin_left = 71.892
margin_top = 114.244
margin_right = 126.892
margin_bottom = 134.244
text = "Defaut"

[node name="Couleur" type="Label" parent="PanelJoueur"]
margin_left = 74.0
margin_top = 69.0
margin_right = 123.0
margin_bottom = 100.0
text = "Couleur
"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PanelHost/btCreer" to="." method="_on_btCreer_pressed"]
[connection signal="pressed" from="PanelRejoindre/btRejoindre" to="." method="_on_btRejoindre_pressed"]
